# pix

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml  trunk.toml
.github/workflows/: ci.yaml
public/: index.html  style.css
src/: app.rs  common.rs  editor.rs  main.rs  pixel.rs  position.rs
tests/: wasm.rs
www/: index.html  style.css
