[package]
name = "pix"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
log = "0.4.16"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
yew = "0.19.3"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "CanvasRenderingContext2d",
  "DomRect",
  "Element",
  "HtmlCanvasElement"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.30"
